# acmbuild

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
.github/: dependabot.yml
.github/workflows/: build-test.yml
source/man/man1/: Makefile.am  acmbuild.1.man.in  acmbuild.1.txt  acmbuild.sh.1.man.in
source/progs/bash/: Makefile.am  acmbuild.in  acmbuild.sh.in  bootstrap.sh.in
src/: atbuild
src/bash-comp/: Makemodule.am  acmbuild.sh.in
src/man/1/: Makefile.am  acmbuild.1.man.in  acmbuild.sh.1.man.in
src/man/man1/: Makefile.am
src/manpages/man1/: Makefile.am  acmbuild.1.txt  atbuild.1.txt
src/prg/bash/: Makefile.am  acmbuild.sh.in  bootstrap.sh.in
src/scripts/: Makefile.am  acmbuild.in  atbuild.in
